--- a/test.html
+++ b/test.html
@@ -7,10 +7,20 @@
     <link rel="stylesheet" href="test.css">
 </head>
 <body>
+    <audio autoplay loop>
+        <source src="start.mp3" type="audio/mp3">
+        Your browser does not support the audio element.
+      </audio>
+    <nav class="nav">
+        <ul>
+            <li><a href="test1.html">Its clickable</a></li>
+        </ul>
+    </nav>
+    <br>
     <div class="container">
         <header>
             <div class="profile-img">
-                <img src="mrfresh.gif" alt="Profile Picture">
+                <img src="mrfresh.gif" alt="tuan segar">
             </div>
             <div class="profile-info">
                 <h1>Wildan Fajar fahrezi</h1>
@@ -22,7 +32,7 @@
                 <p>Alamat: Kp.Pameungpeuk, Pasirhalang</p>
             </div>
         </header>
-        
+
         <section class="about">
             <h2>Desc</h2>
             <p>Enjoying the journey 999</p>
