--- a/test.html
+++ b/test.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <audio autoplay loop>
-        <source src="start.mp3" type="audio/mp3">
+        <source src="music.mp3" type="audio/mp3">
         Your browser does not support the audio element.
       </audio>
     <nav class="nav">
         <ul>
-            <li><a href="test1.html">Its clickable</a></li>
+            <li><a href="test1.html">This is Clickable</a></li>
         </ul>
     </nav>
     <br>
@@ -32,7 +32,6 @@
                 <p>Alamat: Kp.Pameungpeuk, Pasirhalang</p>
             </div>
         </header>
-
         <section class="about">
             <h2>Desc</h2>
             <p>Enjoying the journey 999</p>
