--- a/test.html
+++ b/test.html
@@ -13,7 +13,7 @@
       </audio>
     <nav class="nav">
         <ul>
-            <li><a href="test1.html">This is Clickable</a></li>
+            <li><a href="test1.html" target="_blank">This is Clickable</a></li>
         </ul>
     </nav>
     <br>
