--- a/test.html
+++ b/test.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <audio autoplay loop>
-        <source src="music.mp3" type="audio/mp3">
+        <source src="start.mp3" type="audio/mp3">
         Your browser does not support the audio element.
-      </audio>
+    </audio>
     <nav class="nav">
         <ul>
             <li><a href="test1.html" target="_blank">This is Clickable</a></li>
