--- a/test.html
+++ b/test.html
@@ -11,11 +11,15 @@
         <source src="start.mp3" type="audio/mp3">
         Your browser does not support the audio element.
     </audio>
-    <nav class="nav">
-        <ul>
-            <li><a href="test1.html" target="_blank">This is Clickable</a></li>
-        </ul>
-    </nav>
+    <header class="bass">
+        <nav>
+            <ul>
+                <li><a href="test.html" target="_blank">Tugas 1</a></li>
+                <li><a href="test1.html" target="_blank">Tugas 2</a></li>
+                <li><a href="buku.html" target="_blank">Tugas 3</a></li>
+            </ul>
+        </nav>
+    </header>
     <br>
     <div class="container">
         <header>
